[gd_scene load_steps=2 format=3 uid="uid://dqw8h3k9jvn4p"]

[ext_resource type="Script" path="res://scripts/battle/battle_test.gd" id="1_test"]

[node name="BattleTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Battle System Test"
horizontal_alignment = 1

[node name="SlimeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fight 1 Slime"

[node name="GoblinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fight 1 Goblin"

[node name="MultiButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fight Slime + Goblin"

[node name="WolfButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fight Shadow Wolf"

[node name="BossButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fight Boss (Archivist Shade)"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select a battle to start"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/SlimeButton" to="." method="_on_slime_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GoblinButton" to="." method="_on_goblin_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiButton" to="." method="_on_multi_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WolfButton" to="." method="_on_wolf_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BossButton" to="." method="_on_boss_button_pressed"]
